--- a/.github/workflows/make_summary_gpx.yml
+++ b/.github/workflows/make_summary_gpx.yml
@@ -1,5 +1,7 @@
 name: summary
-on: [push]
+on:
+  release:
+    types: [edited]
 
 jobs:
   test:
@@ -10,4 +12,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-    - run: gpsbabel -h
+    - uses: wyozi/download-gh-release-asset@master
+      with:
+        args: run.gpx
+      env:
+        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+    - run: ls
